Fix layout problems and more

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -477,6 +477,10 @@ main,
     will-change: auto !important;
   }
 
+  .site-header {
+    will-change: transform !important;
+  }
+
   .bg-shape {
     display: none !important;
   }
